Finalizando el montaje HTML

--- a/index.html
+++ b/index.html
@@ -24,9 +24,60 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+  <div class="container">
+    <header class="main-header">
+      <a href="#">
+        <img src="img/logo_Livia..png" alt="Logotipo de la compañía">
+      </a>
+
+      <nav>
+        <ul>
+          <li><a href="#"></a>About</li>
+          <li><a href="#"></a>Service</li>
+          <li><a href="#"></a>Portfolio</li>
+          <li><a href="#"></a>Home</li>
+          <li><a href="#"></a>Blog</li>
+          <li><a href="#"></a>Contact Us</li>
+        </ul>
+      </nav>
+
+    </header>
+
+    <section class="hero">
+      <p class="hero__initial">Hi, There!</p>
+      <h1 class="hero__title">We are a growing-up Creative Agency from Indonesia!</h1>
+      <p class="hero__subtitle">We provides you with modest and professional design 
+        templates that come from the synergy of design and technology</p>
+      <a href="#" class="hero__button">Let’s Collaborate <span>img/Arrow.svg</span></a>
+
+    </section>
+    <section class="categories">
+      <article class="categorie">
+        <img src="img/Web Design.svg" alt="" class="category__icon">
+        <h3 class="category__title">Web Design Projects</h3>
+        <p class="category__description">Make your website user friendly 
+          and look more professional</p>
+        
+      </article>
+      <article class="categorie">
+        <img src="img/Social Media.svg" alt="" class="category__icon">
+        <h3 class="category__title">Social Media Templates</h3>
+        <p class="category__description">Gain more followers or subscribers with
+          the right template</p>
+      </article>
+      <article class="categorie">
+        <img src="img/Design.svg" alt="" class="category__icon">
+        <h3 class="category__title">Digital Artwork</h3>
+        <p class="category__description">Complete your digital work with 
+          appropriate artwork</p>
+      </article>
+    </section>
+
+  </div>
+
+  <header>
+
+  </header>
 
 </body>
 
