Añadiendo los estilos con CSS

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -30,14 +34,14 @@
         <img src="img/logo_Livia..png" alt="Logotipo de la compañía">
       </a>
 
-      <nav>
+      <nav class="main-menu">
         <ul>
-          <li><a href="#"></a>About</li>
-          <li><a href="#"></a>Service</li>
-          <li><a href="#"></a>Portfolio</li>
-          <li><a href="#"></a>Home</li>
-          <li><a href="#"></a>Blog</li>
-          <li><a href="#"></a>Contact Us</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Service</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact Us</a></li>
         </ul>
       </nav>
 
@@ -48,7 +52,7 @@
       <h1 class="hero__title">We are a growing-up Creative Agency from Indonesia!</h1>
       <p class="hero__subtitle">We provides you with modest and professional design 
         templates that come from the synergy of design and technology</p>
-      <a href="#" class="hero__button">Let’s Collaborate <span>img/Arrow.svg</span></a>
+      <a href="#" class="hero__button">Let’s Collaborate <img src="img/Arrow.svg" alt=""></a>
 
     </section>
     <section class="categories">
